<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CMRL</string>
    <string name="bd_browser_key">91ac18a2-9b59-4438-bc64-3000f110362a</string>
    <string name="googlemap_apikey">AIzaSyCNs8nDAMnDXG94MU7DFlmYWDlEO1H6ppc</string>
    <string name="googlemap_webapikey">AIzaSyCz4RYbgIgW-VSBLCIFRHbo06Mk_pgKbVk</string>
    <string name="header_align">Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_add_to_cart_button">Like</string>
    <string name="group_name">Group 1</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="action_settings">Settings</string>
    <string name="menu_txt">Menu</string>
    <string name="station_info">Station Info</string>
    <string name="nearest_station">Nearest Metro Station</string>
    <string name="contact">Contact</string>
    <string name="edit_menu"> <b>+</b> Edit Menu</string>
    <string name="add_menu">Add Menu</string>
    <string name="chart">chart</string>
    <string name="home">Home</string>
    <string name="travel_planner">Travel Planner</string>
    <string name="sta_info">Station Information</string>
    <string name="traval_card">Travel Card Recharge</string>
    <string name="traval_cabs1">Book a Cab</string>
    <string name="traval_cabs">MTC/Auto/Cab Service</string>
    <string name="traval_card_balance">Travel Card Balance</string>
    <string name="setalertdestination">Set Destination Alert</string>
    <string name="feeder_service">Feeder Service</string>
    <string name="nearest_metro">Nearest Metro Station</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="others">Other Info</string>
    <string name="feedback">Feedback</string>
    <string name="Sugarbox">SugarBox Entertainment</string>
    <string name="showmore"><u>Show More</u></string>
    <string name="edit_str">You can set up to 4 shortcut menus and change the order of the menus</string>
    <string name="station_details">Station Details</string>
    <string name="train_timings">Train Timings</string>
    <string name="platforms">Platforms</string>
    <string name="gates_and_directions">Gates And Directions</string>
    <string name="availability_of_parking">Availability Of Parking</string>
    <string name="lost_and_found">Lost And Found</string>
    <string name="contact_information">Contact Information</string>
    <string name="where_to_stay_and_dine">Where To Stay And Dine</string>
    <string name="fare_products">Fare Products</string>
    <string name="notifications">Notifications</string>
    <string name="metro_net_information">Metro Network Information</string>
    <string name="instruction_of_commuters">Instruction To Commuters</string>
    <string name="facilites_for_disabled">Facilities For Disabled Persons</string>
    <string name="helpline">Helpline</string>
    <string name="fare_text1">SJT (Single Journey Token)</string>
    <string name="fare_text2">CSC (Contactless Smart Card)</string>
    <string name="fare_text3">SVC (Stored Value Card) -10% discount in normal fare(Rs.50/-refundable deposit)</string>
    <string name="fare_text4">Trip Card -20% discount in normal fare.</string>
    <string name="fare_text5">10 trip for 30 days</string>
    <string name="fare_text6">30 trip for 90 days</string>
    <string name="fare_text7">60 trip for 180  days</string>
    <string name="fare_text8">P-CSC(paper Contactless Smart Card)</string>
    <string name="fare_text9">Tourist card [1 day -Rs.150/-]</string>
    <string name="fare_text11">Combo Card -Supplied from SBI (ie.ATM cum Debit card).</string>
    <string name="instrc_do_s_1">Please stand in the queue.</string>
    <string name="instrc_do_s_2">Limit your baggage to 15 kgs and size of baggage should not exceed: 60 cm length x 45cm breadth x 25 cm height.</string>
    <string name="instrc_do_s_3">Please use the dustbins.</string>
    <string name="instrc_do_s_4">Please stand on the left side of the escalator.</string>
    <string name="instrc_do_s_5">Please move away from the escalators immediately after use.</string>
    <string name="instrc_do_s_6">Please remember that the train stops for 30 seconds only.</string>
    <string name="instrc_do_s_7">Show your tickets to metro personnel, when asked to.</string>
    <string name="instrc_do_s_8">Consider the comfort of your fellow passengers.</string>
    <string name="instrc_do_s_9">Abstain from drunken and unruly behavior.</string>
    <string name="instrc_do_s_10">Take care of your belongings.</string>
    <string name="instrc_do_s_11">Please contact station controller or customer care for assistance.</string>
    <string name="instrc_do_s_12">Please offer your seat to children, pregnant women and elderly passengers.</string>
    <string name="instrc_do_s_13">Please give preference to differently abled, pregnant women and senior citizens when taking the lift.</string>
    <string name="instrc_do_s_14">PARK  AT YOUR OWN RISK.</string>
    <string name="instrc_don_s_1">Don’t travel without your smartcard or token.</string>
    <string name="instrc_don_s_2">Don’t share your card or token with another person on the same journey.</string>
    <string name="instrc_don_s_3">Don’t jump over the ticket barrier.</string>
    <string name="instrc_don_s_4">Don’t cross the yellow line on the platform.</string>
    <string name="instrc_don_s_5">Don’t step onto the metro tracks.</string>
    <string name="instrc_don_s_6">Don’t try to force the train doors open.</string>
    <string name="instrc_don_s_7">Don’t stick posters or indulge in graffiti inside the train or metro station.</string>
    <string name="instrc_don_s_8">Don’t step on the tactile meant for the visually challenged.</string>
    <string name="instrc_don_s_9">Don’t take the lift it is meant for the physically challenged and aged.</string>
    <string name="instrc_don_s_10">Don’t carry firearms or knives.</string>
    <string name="instrc_don_s_11">Don’t bring pets inside the metro station premises or trains.</string>
    <string name="instrc_don_s_12">Don’t smoke.</string>
    <string name="instrc_don_s_13">Don’t eat or drink in the trains or metro station premises.</string>
    <string name="facilities">All stations are designed with disabled-friendly facilities like escalators, lifts, Toilets,ramped and tactile\n\nTactile tiles are provided at all stations to enable the visually impaired to travel from the entrance to the platform  without assistance.\n\nAdaptation of toilets for wheelchair users, Braille symbols and auditory signals in elevators, and warning signals appropriate places are other disabled-friendly features available stations.\n\nFor hearing impaired commuters, directional and information signage is provided at the stations. Dynamic display giving travel information is provided in stations.\n\nAudio announcements giving travel and general information for visually challenged people.\n\nAudio frequency induction Loop System giving travel and general information for  hearing impaired people.\n\nPassenger emergency telephone in platform and lift intercom phone to contact CMRL staffs in case of emergency.\n\nWide automatic gates are provided for wheelchair users.\n\nDisable friendly Ticket Vending Machine with Help button for operator assistance, Audio announcements along with Audio frequency induction loop system and braille symbols.
    </string>
    <string name="call_us"><a href="tel:+186-04251515">186-04251515</a></string>
    <string name="email_us"><a href="mailto:chennaimetrorail@cmrl.in">chennaimetrorail@cmrl.in</a></string>
    <string name="address">Admin Building CMRL Depot,\nPoonamallee High Road,\nKoyambedu,\nChennai-600107,\nTamil Nadu, India</string>
    <string name="lost_txt_1">A separate Lost and Found office is setup at Alandur metro station at the below for proper storage of lost and found articles disposal and keeping records.</string>
    <string name="alandur_station">Alandur Station</string>
    <string name="contact_num_txt">Contact Number</string>
    <string name="contact_num"><a href="tel:+044-23792220">044-23792220</a></string>
    <string name="customer_care_txt">Customer care Number</string>
    <string name="customer_care_num"><a href="tel:+1860-425-155">1860-425-155</a></string>
    <string name="alandur_addres_title">Alandur metro station</string>
    <string name="alandur_addres">Trichy - Chennai Highway,\nAlandur, Chennai,\nTamil Nadu - 600016</string>
    <string name="instruction_commuters">Instruction to Commuters</string>
    <string name="inst_txt1">The passengers who lost their articles anywhere in chennai metro rail premises or trains, should approach customer care of the given station within 24 hours.</string>
    <string name="inst_txt2">After 24 hours passengers may collect their lost articles at alandur metro station lost and found office between 10 P.M to 5 P.M all days except sundays</string>
    <string name="inst_txt3">The Lost articles will be handed over to the Claimant/Passengers only after proper verification of his/her valid ID proof</string>
    <string name="inst_txt4">Passenger/Claimant may also check their lost articles on CMRL Website : <a href="http://chennaimetrorail.org/">www.chennaimetrorail.org</a></string>
    <string name="inst_txt5">If the lost articles are not claimed within one month, the deposited lost articles at Lost and found office will be disposed off.</string>
    <string name="tour_spots_details">Tour Spots &amp; Details</string>
    <string name="cultural_centres">Cultural Centres</string>
    <string name="local_weather_forecasts">Local Weather Forecasts</string>
    <string name="marina_Beach">Marina Beach</string>
    <string name="edward_elliots_beach">Edward Elliots Beach</string>
    <string name="for_st_george">Fort St. George </string>
    <string name="Vivekanandar_illam">Vivekanandar Illam</string>
    <string name="spencer_plaza">Spencer Plaza</string>
    <string name="arignar_anna_zoological_park">Arignar Anna Zoological Park</string>
    <string name="parthasarathy_temple">Parthasarathy Temple</string>
    <string name="ripon_building">Ripon Building</string>
    <string name="Marina_Beach">Marina Beach is a natural urban beach in the city of Chennai,India along the Bay of Bengal.</string>
    <string name="Edward_Elliots_Beach">Elliots Beach is located in Besant Nagar, Chennai, India. It forms the end-point of the Marina Beach shore.</string>
    <string name="Fort_St_George">Fort St George is the name of the first English fortress in India, founded in 1644 at the coastal city of Madras.</string>
    <string name="vivekanandar_Illam">Vivekanandar Illam is a Structure at Chennai,India,used by the British to Store the ice brought from Great Lakes in North America for about 30 years.</string>
    <string name="Spencer_Plaza">Spencer Plaza was built in 1864,established by Charles Durant and J.W Spencer in Anna Salai,then Known as Mount Road,in the Madras Presidency.</string>
    <string name="Arignar_Anna_Zoological_Park">Arignar Anna Zoological Park, also known as the Vandalur Zoo, is a zoological garden located in Vandalur, a suburb in the southwestern part of Chennai, Tamil Nadu.</string>
    <string name="Parthasarathy_Temple">The Parthasarathy Temple is an 8th century Hindu Vaishnavite temple dedicated to the god Krishna,located at Triplicane,Chennai,India.</string>
    <string name="Ripon_Building">The Ripon Building is the seat of the Chennai Corporation in Chennai, Tamil Nadu. It is a fine example of the Neoclassical style of architecture, a combination of, Ionic and Corinthian.</string>
</resources>