<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        layout="@layout/back_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/marina" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/marina_Beach"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Marina_Beach"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_elliot" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/edward_elliots_beach"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Edward_Elliots_Beach"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/geogreford" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/for_st_george"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Fort_St_George"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/vivekanandar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/Vivekanandar_illam"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/vivekanandar_Illam"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/spencerplaza" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/spencer_plaza"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Spencer_Plaza"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/zoo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/arignar_anna_zoological_park"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Arignar_Anna_Zoological_Park"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/parthasarathy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/parthasarathy_temple"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Parthasarathy_Temple"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ripon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/ripon_building"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/Ripon_Building"
                        android:textSize="14sp" />

                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryLight" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>

